# Cross-platform-avrdude-GUI

./: README.md  README.ru.md
src/: CMakeLists.txt
